<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical" >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/createaccount_yourfirstname"
                android:id="@+id/txtFirstname" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:hint="@string/createaccount_yourphone"
                android:id="@+id/txtPhone" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/createaccount_emailaddress"
                android:id="@+id/txtEmail" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/createaccount_createpassword"
                android:id="@+id/txtPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="17dp"
                android:textAlignment="center"
                android:text="@string/createaccount_termsandprivacypolicy"
                android:id="@+id/textView" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="17dp"
                    android:text="@string/createaccount_our"
                    android:id="@+id/textView2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/createaccount_terms"
                    android:id="@+id/txtTerms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/createaccount_and"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:text="@string/createaccount_privacypolicy"
                    android:id="@+id/txtPrivacypolicy" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_new"
                android:id="@+id/button"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/xml_button"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
