<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/signin_emailaddress"
                android:id="@+id/txtEmail" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/signin_password"
                android:id="@+id/txtPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:id="@+id/button"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/xml_button"
                />
            <Button
                android:text="@string/register_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/xml_button"
                android:id="@+id/buttonRegister"
                android:onClick="registerClick"
                android:textColor="@color/colorTextWhite"
                android:layout_marginTop="10dp"/>
            <Button
                android:text="@string/signin_forgotmypassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:id="@+id/button4"
                android:onClick="forgotPassword"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
