<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTagBg"
        android:padding="16dp"
        android:text="@string/patient_contact"
        android:id="@+id/textView4" />
    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical" >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/createaccount_yourfirstname"
                android:id="@+id/txtFirstname" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:hint="@string/createaccount_yourphone"
                android:id="@+id/txtPhone" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/createaccount_emailaddress"
                android:id="@+id/txtEmail" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_n_book"
                android:id="@+id/button"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/xml_button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
