<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.doctappo.SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/search_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search"
            android:textSize="@dimen/text_normal"
            android:background="@drawable/edittext_shadow"
            android:textColorHint="@color/colorTextDarkGray"/>
        <LinearLayout
            android:layout_marginTop="@dimen/padding_10"
            android:clickable="true"
            android:onClick="LocalityViewClick"
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shadow">
            <TextView
                android:id="@+id/chooseLocality"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="@dimen/text_normal"
                android:layout_height="wrap_content"
                android:text="@string/choose_locality"
                android:textColor="@color/colorTextDarkGray"
                android:layout_gravity="center_vertical"
                />
            <!--<ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/places_ic_search"/>-->
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cover_area"
            android:paddingTop="@dimen/padding_10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/textArea"/>
            <SeekBar
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:text="@string/allow_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
               />

        </LinearLayout>
        <Button
            android:layout_marginTop="@dimen/padding_10"
            android:onClick="SearchButtonClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/colorTextWhite"
            android:background="@drawable/xml_button"/>
    </LinearLayout>
</RelativeLayout>
