<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical" >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/cur_password"
                android:id="@+id/txtCurrentPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/new_password"
                android:id="@+id/txtNewPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/re_password"
                android:id="@+id/txtRePassword"
                />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:id="@+id/button"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/xml_button"
                android:textColor="@color/colorTextWhite"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
