<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ThanksActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/thankyou"
        android:layout_marginBottom="30dp"
        android:textSize="20dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shadow">
        <util.RoundedImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:id="@+id/logoImage"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textBusinessName"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Approx Time : "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalTime"
                    android:text="00:00"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Amount : "
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalAmount"
                    android:text="0.0"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textdate"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:text="02-01-2017"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/texttime"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:text="02-01-2017"/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/countinue_home"
                android:id="@+id/button"
                android:layout_weight="1"
                android:onClick="orderFinish"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/xml_button"
                android:layout_marginRight="5dp"
                />

            <Button
                android:onClick="myOrderActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/track_my_order"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/xml_button"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
